--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: perl
 perl:
-    - "5.19"
+    - "5.20"
     - "5.18"
     - "5.16"
     - "5.14"
@@ -16,8 +16,8 @@ script:
     - dzil smoke --release --author
 
 after_success:
-    - cpanm --quiet --notest --skip-satisfied Dist::Zilla::App::Command::cover Devel::Cover::Report::Coveralls
-    - dzil cover -test
-    - dzil cover -report coveralls
+    - cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Coveralls
+    - cpanm --quiet --notest --skip-satisfied Dist::Zilla::App::Command::cover
+    - dzil cover -outputdir cover_db -report coveralls
 
 env: RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1
