switch to Dist::Milla

--- a/dist.ini
+++ b/dist.ini
@@ -1,23 +1,4 @@
 name    = MARC-Parser-RAW
-license = Perl_5
-author  = Johann Rolschewski <rolschewski@gmail.com>
-copyright_year   = 2014
-copyright_holder = Johann Rolschewski
+author  = Johann Rolschewski <jorol@cpan.org>
 
-version = 0.01
-
-[@Basic]
-[MetaJSON]
-[GithubMeta]
-issues = 1
-user   = jorol
-[@Git]
-[PodWeaver]
-[CheckChangeLog]
-[OurPkgVersion]
-
-[Prereqs::FromCPANfile]
-
-[PruneFiles]
-filename = README.md
-filename = Makefile.PL
+[@Milla]
