--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-blib*
-Makefile
-Makefile.old
+*.tar.gz
+.build/
+.lwpcookies
+.tidyall.d/
 Build
 Build.bat
-_build*
-pm_to_blib*
-*.tar.gz
-.lwpcookies
-cover_db
-pod2htm*.tmp
 MARC-Parser-RAW-*
-.build/
+Makefile
+Makefile.old
+_build*
+blib*
+cover_db
+pm_to_blib*
+pod2htm*.tmp
