--- a/.tidyallrc
+++ b/.tidyallrc
@@ -3,6 +3,12 @@ select = {lib,t}/**/*.{pl,pm,t}
 select = Makefile.PL
 select = {mod2html,podtree2html,pods2html,perl2html}
 argv = --profile=$ROOT/.perltidyrc
+ 
+[PerlCritic]
+select = lib/**/*.pm
+argv = --profile $ROOT/.perlcriticrc
+ignore = t/author-*
+ignore = t/release-*
 
 [SortLines]
 select = .gitignore
